# taurus-invictus-powder

./: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  FFTComponent.cpp  FFTComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
.test/: powder.filtergraph
